<resources>
    <string name="app_name">Panna</string>
    <string name="panna_social_leagues">Panna Social Leagues</string>

    <!-- login/register -->
    <string name="login_button">Sign In</string>
    <string name="register_button">Sign Up</string>
    <string name="sign_up_button">Don\'t have an account? Sign Up!</string>
    <string name="already_registered">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_option_divider">OR</string>
    <string name="facebook_button">Log In with Facebook</string>
    <string name="email_in_use">Email address is already in use by another account.</string>

    <!-- profile / player -->
    <string name="os_android">android</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="set_photo_msg">Set a profile photo so other users know it\'s you!</string>
    <string name="profile">Profile</string>

    <!-- facebook -->
    <string name="facebook_app_id">123063264768667</string>
    <string name="fb_login_protocol_scheme">fb123063264768667</string>

    <!-- Main -->
    <string name="db_error">Oops…Looks like something went wrong, try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_account">Account</string>
    <string name="title_map">Upcoming</string>
    <string name="title_league">Leagues</string>
    <string name="toolbar_title_map">Games</string>
    <string name="title_calendar">Calendar</string>

    <!-- event -->
    <string name="create_event">Create Event</string>
    <string name="add_event">Add Event</string>
    <string name="no_events">There are currently no events near you</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="past_games">Past Games</string>
    <string name="edit">Edit</string>
    <string name="leave">Leave</string>
    <string name="preview">Preview</string>
    <string name="join">Join</string>
    <string name="none">None</string>
    <string name="success_join_title">You\'ve joined a game</string>
    <string name="success_join">You can go to your Calendar to see upcoming events</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="players_underlined">Players</string>
    <string name="description_underlined">Description</string>
    <string name="leave_event_title">Are you sure?</string>
    <string name="leave_event">Are you sure you want to leave the game?</string>
    <string name="leave_paid_event">You are leaving a game that you\'ve already paid for.</string>
    <string name="add_name_title">Could not join event</string>
    <string name="add_name">You need to add your name before joining a game. Update your profile now?</string>
    <string name="game_full">This event is currently full</string>

    <!-- account fragment -->
    <array name="accountOptions">
        <item name="profile">Edit profile</item>
        <!--<item name="notifications">Push notifications</item>-->
        <item name="payment">Click to add a payment method</item>
        <item name="version">Version</item>
        <item name="website">Website</item>
        <item name="logOut">Log out</item>
    </array>

    <array name="accountOptionsWithPayment">
        <item name="profile">Edit profile</item>
        <!--<item name="notifications">Push notifications</item>-->
        <item name="payment">Click to view payment methods</item>
        <item name="version">Version</item>
        <item name="website">Website</item>
        <item name="logOut">Log out</item>
    </array>

    <array name="accountOptionsWithoutPayment">
        <item name="profile">Edit profile</item>
        <!--<item name="notifications">Push notifications</item>-->
        <item name="version">Version</item>
        <item name="website">Website</item>
        <item name="logOut">Log out</item>
    </array>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Payment -->
    <string name="payment_required_title">Payment Required</string>
    <string name="payment_required_details">If you join, please pay the organizer when you show up for the game.</string>
    <string name="payment_config">paymentRequired</string>
    <string name="add_payment_title">Add a Card</string>
    <string name="add_card_button">Add card</string>
    <string name="invalid_card">Invalid card data</string>
    <string name="payment_updated">Payment Method Updated</string>
    <string name="view_payment_method">Click to view payment methods</string>
    <string name="no_payment_method">No payment method available</string>
    <string name="event_fee">This event as a fee. Please add a payment method in your profile.</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="payment_failed">Failed to make a payment.</string>
    <string name="processing_payment">Processing payment…</string>


    <!-- Chat -->
    <string name="messages_hint">Type a message…</string>
    <string name="messages_hint_disabled">Join game to send messages</string>

    <!-- Dialog -->
    <string name="cancel">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="status_joining">Joining game…</string>
    <string name="status_processing_payment">Processing payment…</string>
    <string name="leave_game">Leave Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="join_game">Join Game</string>
    <string name="join_league">Join league</string>
    <string name="leave_league">Leave league</string>
    <string name="private_league">League is private</string>

    <!-- Invites -->
    <string name="invitation_message_event">Are you up for playing pickup with us? Join the event here:</string>
    <string name="invitation_message_league">Join my league and play some pickup:</string>
    <string name="invitation_title">Invite Contacts</string>
    <string name="ios_app_client_id">604793521337-ucvtl11bm9k5mo944h5vj6dv67digg0q.apps.googleusercontent.com</string>
    <string name="invite_friend">Invite a friend</string>

    <!-- Leauges -->
    <string name="your_leagues">Your Leagues</string>
    <string name="other_leagues">Other leagues</string>

    <!-- Notifications/Notification channel-->
    <string name="notification_channel_name">Panna Social Leagues</string>
    <string name="notification_channel_id" translatable="false">PANNA_NOTIFICATION_ID</string>
    <string name="title_activity_add_venue">Add Venue</string>


    <!-- Maps/Permission -->
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_denied_map">Please allow access to your location so we can show you local events.</string>
    <string name="permission_settings">To continue, please enable access to location from your system settings.</string>
    <string name="permission_denied_explanation">Permission denied. To continue, please enable access to location from your system settings.</string>
    <string name="permission_rationale">We need access to your location to help you find a local venue for your event.</string>
    <string name="settings">Settings</string>
    <string name="play_service_unavailable">Can\'t connect to Google Play Services</string>

    <string name="no_address_found">Sorry, no address found.</string>
    <string name="no_location_data_provided">No location data provided.</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude.</string>
    <string name="action_share_event">Share event</string>
    <string name="action_share_league">Share league</string>

</resources>
