<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="io.renderapps.balizinha.activity.SetupProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <include
        android:id="@+id/progress_view"
        layout="@layout/progress_view"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_add_photo"
        android:scaleType="centerCrop"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="32dp"/>

    <ProgressBar
        android:id="@+id/upload_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        style="?android:progressBarStyleSmall"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_user"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:maxLength="254"
        android:maxLines="1" />

    <EditText
        android:id="@+id/user_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_marker"
        android:drawableLeft="@drawable/ic_marker"
        android:drawablePadding="10dp"
        android:hint="@string/city"
        android:fontFamily="sans-serif"
        android:maxLength="30"
        android:textSize="15sp"
        android:maxLines="1"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/user_description"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_text"
        android:drawableLeft="@drawable/ic_text"
        android:drawablePadding="10dp"
        android:hint="@string/description"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:maxLines="5"
        android:maxLength="250"/>

    <ProgressBar
        android:id="@+id/update_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        style="?android:progressBarStyleSmall"
        android:visibility="gone"/>
</LinearLayout>
